--- a/package.json
+++ b/package.json
@@ -119,15 +119,15 @@
     "lucide-react": "^0.544.0",
     "multer": "^2.0.2",
     "nanoid": "^5.1.6",
-    "next": "^16.0.1",
+    "next": "^16.1.4",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
     "pm2": "^5.4.3",
     "prisma": "^6.18.0",
-    "react": "19.1.0",
+    "react": "^19.2.3",
     "react-daum-postcode": "^3.2.0",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.66.0",
     "react-i18next": "^15.7.4",
     "react-phone-number-input": "^3.4.13",
@@ -171,7 +171,7 @@
     "@vitest/ui": "^4.0.6",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
-    "eslint-config-next": "16.0.0",
+    "eslint-config-next": "^16.1.4",
     "eslint-plugin-storybook": "^9.1.16",
     "happy-dom": "^20.0.10",
     "husky": "^9.1.7",
