--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "embla-carousel-react": "^8.6.0",
     "eslint-plugin-react-hooks": "^7.0.1",
     "expo-server-sdk": "^4.0.0",
+    "firebase": "^12.8.0",
     "form-data": "^4.0.4",
     "input-otp": "^1.4.2",
     "ioredis": "^5.8.2",
@@ -168,7 +169,7 @@
     "@vitejs/plugin-react": "^5.1.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^4.0.6",
+    "@vitest/ui": "^3.2.4",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.1.4",
